--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,15 +1,15 @@
 body {
-    background-image: url("assets/images/background.jpg");
+    background-image: url("../images/background.jpg");
 }
 .jumbotron{
     font-family: 'Pacifico', cursive;
 }
-/* body{
-    background-image: url(/assets/images/hangman-150.png);
+body{
+    background-image: url(../images/hangman-150.png);
     background-repeat: no-repeat;
     background-position-x: 370px;
     background-position-y: 272px;
-} */
+}
 img{
     position: relative;
     border: 3px solid #73AD21;
